--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <!-- ANA SAYFA -->
 <div id="mainContent">
   <div class="left">
-    <img src="https://ilhantopaloglu.github.io/HizliOkuma/Logo.jpg"
+    <img src="https://KronosEgitim.github.io/HizliOkuma/Logo.jpg"
          onerror="this.style.display='none'">
   </div>
 
@@ -162,28 +162,28 @@
 
     <!-- 1 -->
     <div class="card"
-         onclick="location.href='https://ilhantopaloglu.github.io/HizliOkuma/goz.html'">
+         onclick="location.href='https://KronosEgitim.github.io/HizliOkuma/goz.html'">
       <h3>Göz Kası Çalışması</h3>
       <p>Göz kaslarını güçlendiren odak ve takip egzersizleri.</p>
     </div>
 
     <!-- 2 -->
     <div class="card"
-         onclick="location.href='https://ilhantopaloglu.github.io/HizliOkuma/kelime.html'">
+         onclick="location.href='https://KronosEgitim.github.io/HizliOkuma/kelime.html'">
       <h3>Kelime Çalışması</h3>
       <p>Kelime tanıma, hız ve algı geliştirme çalışmaları.</p>
     </div>
 
     <!-- 3 -->
     <div class="card"
-         onclick="location.href='https://ilhantopaloglu.github.io/HizliOkuma/blok.html'">
+         onclick="location.href='https://KronosEgitim.github.io/HizliOkuma/blok.html'">
       <h3>Blok Çalışması</h3>
       <p>Blok okuma ve metinle hız kazanma alıştırmaları.</p>
     </div>
 
     <!-- 4 -->
     <div class="card"
-         onclick="location.href='https://ilhantopaloglu.github.io/HizliOkuma/hafiza.html'">
+         onclick="location.href='https://KronosEgitim.github.io/HizliOkuma/hafiza.html'">
       <h3>Hafıza Oyunu</h3>
       <p>Kısa süreli hafıza ve görsel hatırlama oyunu.</p>
     </div>
@@ -192,7 +192,7 @@
 </div>
 
 <script>
-const KOD_TXT_URL = "https://ilhantopaloglu.github.io/HizliOkuma/kod.txt";
+const KOD_TXT_URL = "https://KronosEgitim.github.io/HizliOkuma/kod.txt";
 const STORAGE_KEY = "USER_CODE";
 
 window.onload = () => {
