--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -7,6 +6,8 @@
   <title>Hızlı Okuma ve Alıştırmalar</title>
 
   <style>
+    *,*::before,*::after{box-sizing:border-box;}
+
     body{
       font-family: Arial, sans-serif;
       background:#f5f5f5;
@@ -95,10 +96,11 @@
       font-size:16px;
       border-radius:8px;
       border:1px solid #ccc;
+      box-sizing:border-box;
     }
     #toggleCode{
       position:absolute;
-      right:10px;
+      right:12px;
       top:50%;
       transform:translateY(-50%);
       cursor:pointer;
