--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <!-- 3 -->
     <div class="card"
          onclick="location.href='https://KronosEgitim.github.io/HizliOkuma/blok.html'">
-      <h3>Blok Çalışması</h3>
+      <h3>Metin Çalışması</h3>
       <p>Blok okuma ve metinle hız kazanma alıştırmaları.</p>
     </div>
 
