--- a/blok.html
+++ b/blok.html
@@ -163,9 +163,19 @@ body{
           <input id="apiKeyInput" type="password" placeholder="OpenAI API anahtarı (sk-...)" style="width:100%;margin-bottom:6px;box-sizing:border-box;">
           <button class="primary" id="apiSaveBtn" type="button">API Doğrula ve Kaydet</button>
           <div id="apiSaveStatus" style="font-size:11px;margin-top:6px;"></div>
+
+    <div style="font-size:11px;margin-top:6px;">
+    API kodu almak için:
+    <a href="https://platform.openai.com/api-keys"
+       target="_blank"
+       rel="noopener noreferrer">
+       Link
+    </a>
+  </div>
+        
         </div>
       </div>
-
+      
       <div class="section">
         <h3>2) Metin</h3>
         <label>Yaş Aralığı</label>
