--- a/blok.html
+++ b/blok.html
@@ -157,16 +157,22 @@ body{
       <!-- API BÖLÜMÜ (Bu sayfada sorgulansın) -->
       <div class="section">
         <h3>1) API Durumu</h3>
-        <div id="apiStatusLine" style="font-weight:bold;margin-bottom:6px;"></div>
+        
+<div id="apiStatusLine" style="font-weight:bold;margin-bottom:6px;"></div>
 
-        <div id="apiEntry" style="display:none;">
-          <input id="apiKeyInput" type="password" placeholder="OpenAI API anahtarı (sk-...)" style="width:100%;margin-bottom:6px;box-sizing:border-box;">
-          <button class="primary" id="apiSaveBtn" type="button">API Doğrula ve Kaydet</button>
+<!-- ✅ Buton her zaman görünsün -->
+<button class="secondary" id="apiClearBtn" type="button">API Anahtarını Sil / Değiştir</button>
 
-          <!-- ✅ YENİ: API SİL/DEĞİŞTİR BUTONU -->
-          <button class="secondary" id="apiClearBtn" type="button">API Anahtarını Sil / Değiştir</button>
+<div id="apiEntry" style="display:none;">
+  <input id="apiKeyInput" type="password" placeholder="OpenAI API anahtarı (sk-...)" style="width:100%;margin-bottom:6px;box-sizing:border-box;">
+  <button class="primary" id="apiSaveBtn" type="button">API Doğrula ve Kaydet</button>
+  <div id="apiSaveStatus" style="font-size:11px;margin-top:6px;"></div>
 
-          <div id="apiSaveStatus" style="font-size:11px;margin-top:6px;"></div>
+  <div style="font-size:11px;margin-top:6px;">
+    API kodu almak için:
+    <a href="https://platform.openai.com/api-keys" target="_blank" rel="noopener noreferrer">Link</a>
+  </div>
+</div>
 
           <div style="font-size:11px;margin-top:6px;">
             API kodu almak için:
